CHANGES
=======

* Remove some dependent packages in requirements.txt
* Add the module of `daemon`
* Add the test of `inet_protocol`
* Add the test of `builtin`
* Add the test of `const`
* Add the install script to package it
* Add the tests
* Rename
* Add a argument and fix a error
* Fix the bug for `set_builtin`
* Add some codes
* Initial commit