@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+* Add the server based on oslo.service
+* Add the queue based on Redis
+* Update the formatter of logging of Python
+* Add the argument of 'stdio' for daemon
+* Add the test of `logging_dict_config`
+* Add the test of `objects`
 * Remove some dependent packages in requirements.txt
 * Add the module of `daemon`
 * Add the test of `inet_protocol`
